# damage-detection

./: .dockerignore  .gitignore  CLAUDE.md  README.md  damage-detection.code-workspace  docker-compose.yml
services/pipeline/: Dockerfile  pyproject.toml
services/pipeline/src/pipeline/: consumer.py  main.py  orchestrator.py
services/pipeline/src/pipeline/config/: settings.py
services/pipeline/src/pipeline/models/: interfaces.py
services/pipeline/src/pipeline/models/yolov8/: damage_detector.py
services/pipeline/src/pipeline/stages/: blur_stage.py  damage_stage.py  frame_extractor.py  output_stage.py
services/pipeline/src/pipeline/storage/: dynamo_client.py  event_publisher.py  s3_client.py
services/pipeline/tests/contract/: test_blur_contract.py  test_blur_health.py
services/pipeline/tests/integration/: test_job_status.py  test_local_env.py  test_pipeline_e2e.py
services/pipeline/tests/unit/: test_blur_stage.py  test_damage_detector.py  test_damage_stage.py  test_dynamo_client.py  test_event_publisher.py  test_frame_extractor.py  test_output_stage.py  test_s3_client.py  test_startup_recovery.py
services/plate-blurring/: Dockerfile  pyproject.toml
services/plate-blurring/src/plate_blurring/: main.py
services/plate-blurring/src/plate_blurring/api/: app.py  routes.py
services/plate-blurring/src/plate_blurring/config/: settings.py
services/plate-blurring/src/plate_blurring/models/: interfaces.py
services/plate-blurring/src/plate_blurring/models/yolov8/: plate_detector.py
services/plate-blurring/tests/unit/: test_plate_detector.py  test_routes.py
(+20 files in other folders)
