[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plate-blurring"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.0",
    "opencv-python>=4.8",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "boto3>=1.34",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
